--- a/src/assets/scss/partials/_new-blog.scss
+++ b/src/assets/scss/partials/_new-blog.scss
@@ -1,9 +1,14 @@
 .new-blog {
   margin-bottom: 20px;
   margin-top: 20px;
+
   &__block {
     display: flex;
     gap: 8px;
+
+    @include mobile {
+      flex-direction: column;
+    }
   }
 
   &__heading {
