--- a/src/assets/scss/sections/_new-footer.scss
+++ b/src/assets/scss/sections/_new-footer.scss
@@ -149,6 +149,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @include mobile {
+      flex-direction: column;
+    }
   }
 
   &__heading {
